--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ p {
   padding: 0;
 }
 
-ol {
+ol, ul {
   margin: 0;
   padding: 0;
 }
@@ -543,6 +543,114 @@ input[type="email"]:-ms-input-placeholder {
   line-height: 18px;
   color: var(--basic-color);
 }
+
+/* footer */
+.footer {
+  background-color: var(--txt-color);
+}
+
+.footer .container {
+  padding: 80px 40px 80px 40px;
+}
+
+.footer__source {
+  margin-bottom: 57px;
+  display: flex;
+}
+
+.footer__links {
+  padding-top: 147px;
+}
+
+.links__list {
+  display: flex;
+  margin-bottom: 32px;
+}
+
+.links__item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.links__social {
+  display: block;
+  width: 24px;
+  height: 24px;
+  background: no-repeat;
+  cursor: pointer;
+}
+
+.insta {
+  background-image: url('../img/icon__insta.svg');
+}
+
+.twitter {
+  background-image: url('../img/icon__twitter.svg');
+}
+
+.linkedin {
+  background-image: url('../img/icon__linkedin.svg');
+}
+
+.youtube {
+  background-image: url('../img/icon__youtube.svg');
+}
+
+.footer__title {
+  font-family: var(--inter);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--basic-color);
+}
+
+.footer__link {
+  font-family: var(--inter);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: var(--basic-color);
+}
+
+.footer__title {
+  margin-bottom: 24px;
+}
+
+.footer__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.footer__secure {
+  padding-top: 32px;
+  border-top: 1px solid #CECDDB;
+}
+
+.footer__copy, .secure__link {
+  font-family: var(--inter);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: var(--basic-color);
+}
+
+.footer__copy {
+  margin-bottom: 8px;
+}
+
+.secure__list {
+  display: flex;
+}
+
+.secure__item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.footer__info {
+  margin-left: auto;
+  display: flex;
+  justify-content: space-evenly;
+  width: 70%;
+}
+
 
 
 
