--- a/css/media.css
+++ b/css/media.css
@@ -25,7 +25,7 @@
     width: 70%;
   }
 
-  .work__img {
+  .section-work__img {
     width: 386px;
     height: 424px;
   }
@@ -77,11 +77,11 @@
             flex-direction: column-reverse;
   }
 
-  div.work__txt {
+  div.section-work__txt {
     width: 100%;
   }
 
-  p.sub__work {
+  p.section-work__sub {
     width: 100%;
   }
 
@@ -89,11 +89,11 @@
     width: 100%;
   }
 
-  p.members__sub {
+  p.section-members__sub {
     padding-top: 85px;
   }
 
-  ul.members__list {
+  ul.section-members__list {
     width: 100%;
   }
 
@@ -113,7 +113,7 @@
     padding-top: 75px;
   }
 
-  .article__title.insurers__title {
+  .article__title.part-2__insurers-title {
     padding-top: 52px;
   }
 
@@ -148,7 +148,7 @@
     right: 40px;
   }
 
-  div.meet__about {
+  div.section-meet__about {
     padding-top: 40px;
     width: 100%;
   }
@@ -157,7 +157,7 @@
     margin-bottom: 15px;
   }
 
-  .meet__link.main-btn {
+  .section-meet__link.main-btn {
     margin-bottom: 60px;
   }
 
@@ -226,7 +226,7 @@
     left: 10px;
   }
 
-  h3.form__title {
+  h3.form-section__title {
     width: 50%;
     font-size: 22px;
     line-height: 30px; 
@@ -238,14 +238,14 @@
     line-height: 22px;
   }
 
-  h2.title__work,
-  p.members__sub,
-  h3.meet__title {
+  h2.section-work__title-work,
+  p.section-members__sub,
+  h3.section-meet__title {
     font-size: 24px;
     line-height: 30px;
   }
 
-  li.members__item {
+  li.section-members__item {
     font-size: 15px;
   }
 }
@@ -260,50 +260,130 @@
     padding: 0 15px 0 15px;
   }
 
+  .header div.container {
+    margin-bottom: 50px;
+  }
+
+  .main div.container, .section-work div.container {
+    padding-top: 0px;
+  }
+
   h1.main__title {
+    margin-bottom: 20px;
     font-size: 22px;
     line-height: 30px;
   }
 
-  ol.num__list {
+  ol.main__list {
+    margin-bottom: 50px;
     font-size: 17px;
     line-height: 22px;
   }
 
-  .work__img {
+  button.section-work__btn.how-work {
+    display: block;
+    margin: 0 auto;
+  }
+
+  h2.section-work__title-work {
+    text-align: center;
+  }
+
+  .section-work__pic {
+    align-self: center;
+  }
+
+  h2.section-work__title-work,
+  button.section-work__btn.how-work {
+    margin-bottom: 20px;
+  }
+
+  .section-work__img {
     width: 369px;
     height: 405px;
   }
 
-  p.members__sub {
+  figure.figure {
+    margin-bottom: 50px;
+  }
+
+  figcaption.figcap {
+    margin-bottom: 20px;
+  }
+
+  li.section-members__item {
+    line-height: 21px;
+  }
+
+  p.section-members__sub {
     padding-top: 42px;
   }
 
-  .employers__article h3.article__title {
+  .part-2__article h3.article__title {
     padding-top: 52px;
   }
 
   h3.article__title {
+    padding-top: 52px;
     font-size: 20px;
     line-height: 30px;
   }
 
-  article.article:last-of-type {
-    background-position: bottom -5px right 0px;
-  }
-
-  div.footer__links {
+  .article:nth-of-type(2) {
     padding-top: 0;
   }
 
-  ul.links__list {
+  article.article:last-of-type {
+    background: none;
+    min-height: 1rem;
+  }
+
+  div.part-3 {
+    padding-top: 20px;
+  }
+
+  .section-meet div.container {
+    padding-top: 10px;
+    min-height: 55rem;
+  }
+
+  div.section-meet__about {
+    padding-top: 0;
+  }
+
+  .meet__pic.meet__pic--2 {
+    right: 5px;
+  }
+
+  .form-section div.container {
+    padding: 46px 0 16px 15px;
+  }
+
+  .footer div.container {
+    padding: 40px 20px 40px 20px;
+  }
+
+  div.footer-links {
+    padding-top: 0;
+  }
+
+  .footer__title {
+    border-bottom: none;
+    text-decoration: underline;
+  }
+
+  div.footer__content:not(:last-of-type) {
+    margin-right: 15px;
+  }
+
+  ul.footer-links__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
 
-  li.links__item:not(:last-child) {
+  li.footer-links__item:not(:last-child) {
     margin-bottom: 20px;
   }
 
@@ -311,7 +391,7 @@
     width: 85%;
   }
 
-  ul.secure__list {
+  ul.footer-secure__list {
     margin-right: 15px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -325,12 +405,16 @@
     background-image: url('../img/320-header.webp');
   }
 
-  .work__img {
+  .section-work__img {
     width: 240px;
     height: 263px;
   }
 
   .meet__pic--3  {
     width: 239px;
+  }
+
+  .section-meet div.container {
+    min-height: 60rem;
   }
 }
