--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
   font-family: var(--roboto);
   background: var(--basic-color) no-repeat top center;
   background-image: url('../img/header.webp');
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
@@ -126,14 +127,14 @@ img {
 .header__btn,
 .main-btn,
 .min-btn,
-.meet__link {
+.section-meet__link {
   position: relative;
 } 
 
 .main-btn:after,
 .header__btn:after,
 .min-btn:after,
-.meet__link:after {
+.section-meet__link:after {
   content: "";
   position: absolute;
   display: inline-block;
@@ -158,7 +159,7 @@ img {
   border-right: 3px solid var(--txt-color);
 }
 
-.meet__link:after {
+.section-meet__link:after {
   right: 20px;
 }
 
@@ -190,7 +191,7 @@ img {
   line-height: 58px;
 }
 
-.num__list {
+.main__list {
   list-style: none;
   counter-reset: section;
   margin-right: 30px;
@@ -203,11 +204,11 @@ img {
   letter-spacing: 0.5px;
 }
 
-.num__item:not(:last-child) {
+.main__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.num__item::before {
+.main__item::before {
   counter-increment: section;
   content: counter(section) " : ";
 }
@@ -263,11 +264,11 @@ img {
   padding-top: 237px;
 }
 
-.work__txt {
+.section-work__txt {
   width: 60%;
 }
 
-.title__work {
+.section-work__title-work {
   margin-bottom: 34px;
   font-family: var(--roboto);
   font-size: 46px;
@@ -276,7 +277,7 @@ img {
   color: var(--txt-color)
 }
 
-.sub__work {
+.section-work__sub {
   width: 80%;
   font-family: var(--inter);
   font-size: 16px;
@@ -285,11 +286,11 @@ img {
   color: var(--txt-color);
 }
 
-.sub__work:first-of-type {
+.section-work__sub:first-of-type {
   margin-bottom: 23px;
 }
 
-.sub__work:last-of-type {
+.section-work__sub:last-of-type {
   margin-bottom: 38px;
 }
 
@@ -307,16 +308,16 @@ img {
   border-radius: 320px;
 }
 
-.work__pic {
+.section-work__pic {
   margin-bottom: 144px;
 }
 
-.work__img {
+.section-work__img {
   max-width: 520px;
   max-height: 571px;
 }
 
-.work__btn {
+.section-work__btn {
   margin-bottom: 30px;
 }
 
@@ -360,7 +361,7 @@ img {
   line-height: 67px;
 }
 
-.members__sub {
+.section-members__sub {
   margin-bottom: 105px;
   padding-top: 170px;
   font-family: var(--roboto);
@@ -371,7 +372,7 @@ img {
   color: var(--txt-color);
 }
 
-.members__list {
+.section-members__list {
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,7 +383,7 @@ img {
   width: 60%;
 }
 
-.members__item {
+.section-members__item {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -398,15 +399,15 @@ img {
   background: no-repeat center left;
 }
 
-.members__item:first-child {
+.section-members__item:first-child {
   background-image: url('../img/case.svg');
 }
 
-.members__item:nth-child(2) {
+.section-members__item:nth-child(2) {
   background-image: url('../img/secure.svg');
 }
 
-.members__item:last-child {
+.section-members__item:last-child {
   background-image: url('../img/medicine.svg');
 }
 
@@ -431,7 +432,7 @@ img {
   color: var(--txt-color);
 }
 
-.employers__article .article__title {
+.part-2__article .article__title {
   padding-top: 104px;
   margin-bottom: 26px;
 }
@@ -450,15 +451,15 @@ img {
 }
 
 .article__sub,
-.employers__btn {
+.part-2__btn {
   margin-bottom: 28px;
 }
 
-.employers__btn {
+.part-2__btn {
   display: block;
 }
 
-.employers__article {
+.part-2__article {
   margin-bottom: 136px;
 }
 
@@ -496,8 +497,8 @@ article:last-of-type {
   line-height: 25px;
 }
 
-.link__sub {
-  width: 340px;
+.part-2__descr {
+  max-width: 340px;
 }
 
 /* section meet */
@@ -513,12 +514,12 @@ article:last-of-type {
   min-height: 70rem;
 }
 
-.meet__about {
+.section-meet__about {
   padding-top: 132px;
   width: 40%;
 }
 
-.meet__title {
+.section-meet__title {
   margin-bottom: 26px;
   font-family: var(--roboto);
   font-size: 47px;
@@ -527,22 +528,22 @@ article:last-of-type {
   color: var(--txt-color);
 }
 
-.meet__sub {
+.section-meet__sub {
   font-family: var(--inter);
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
 }
 
-.meet__sub:first-of-type {
+.section-meet__sub:first-of-type {
   margin-bottom: 23px;
 }
 
-.meet__sub:last-of-type {
+.section-meet__sub:last-of-type {
   margin-bottom: 28px;
 }
 
-.meet__link {
+.section-meet__link {
   padding-top: 12px;
 }
 
@@ -594,7 +595,7 @@ article:last-of-type {
   width: 60%;
 }
 
-.form__title {
+.form-section__title {
   margin-bottom: 30px;
   width: 70%;
   font-family: var(--roboto);
@@ -604,7 +605,7 @@ article:last-of-type {
   color: var(--basic-color);
 }
 
-.form__warning .form__link {
+.form-section__warning .form-section__link {
   font-family: var(--inter);
   font-size: 12px;
   font-weight: 400;
@@ -626,7 +627,7 @@ input[type="email"]:-ms-input-placeholder {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-.form__btn {
+.form-section__btn {
   padding: 10px;
   width: 106px;
   min-height: 48px;
@@ -636,8 +637,8 @@ input[type="email"]:-ms-input-placeholder {
   border-radius: 8px;
 }
 
-.form__warning,
-.form__link {
+.form-section__warning,
+.form-section__link {
   font-family: var(--inter);
   font-size: 12px;
   font-weight: 400;
@@ -645,7 +646,7 @@ input[type="email"]:-ms-input-placeholder {
   color: var(--basic-color);
 }
 
-.form__warning {
+.form-section__warning {
   max-width: 380px;
 }
 
@@ -665,11 +666,11 @@ input[type="email"]:-ms-input-placeholder {
   display: flex;
 }
 
-.footer__links {
+.footer-links {
   padding-top: 147px;
 }
 
-.links__list {
+.footer-links__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -678,11 +679,11 @@ input[type="email"]:-ms-input-placeholder {
   margin-bottom: 32px;
 }
 
-.links__item:not(:last-child) {
+.footer-links__item:not(:last-child) {
   margin-right: 15px;
 }
 
-.links__social {
+.footer-links__social {
   display: block;
   width: 24px;
   height: 24px;
@@ -739,16 +740,16 @@ input[type="email"]:-ms-input-placeholder {
   margin-bottom: 16px;
 }
 
-.footer__secure {
+.footer-secure {
   padding-top: 32px;
   border-top: 1px solid #CECDDB;
 }
 
-.secure__item {
+.footer-secure__item {
   max-width: 115px;
 }
 
-.footer__copy, .secure__link {
+.footer-secure__copy, .footer-secure__link {
   font-family: var(--inter);
   font-size: 14px;
   font-weight: 400;
@@ -756,19 +757,19 @@ input[type="email"]:-ms-input-placeholder {
   color: var(--basic-color);
 }
 
-.footer__copy {
+.footer-secure__copy {
   margin-bottom: 8px;
   width: 240px;
 }
 
-.secure__list {
+.footer-secure__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-right: 100px;
 }
 
-.secure__item:not(:last-child) {
+.footer-secure__item:not(:last-child) {
   margin-right: 24px;
 }
 
