--- a/css/style.css
+++ b/css/style.css
@@ -119,12 +119,57 @@ img {
   color: var(--basic-color);
 }
 
+.main-btn:focus,
+.min-btn:focus,
+button.section-work__btn.how-work:focus,
+button.form-section__btn:focus {
+  outline: 1px solid #D2C8D2;
+  outline-offset: 3px;
+  border-radius: 8px;
+}
+
+.main-btn:hover {
+  box-shadow: inset 0 0 7px #EBB0EB;
+}
+
+button.section-work__btn.how-work:hover {
+  box-shadow: inset 0 0 7px #C7BEC7;
+}
+
+button.form-section__btn:hover {
+  box-shadow: inset 0 0 10px #D833D8;
+  border-radius: 8px;
+}
+
+.main-btn:active {
+  background-color: #9B279B;  
+}
+
+.min-btn:active,
+button.section-work__btn.how-work:active,
+button.form-section__btn:active {
+  background-color: rgba(155, 39, 155, 0.2);
+}
+
+button.form-section__btn:active {
+  background-color: rgba(184, 180, 184);
+  color: #fff;
+}
+
 .min-btn {
   display: block;
   margin-right: 10px;
   margin-bottom: 30px;
-  width: 120px;
+  width: 140px;
   min-height: 24px;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.min-btn:hover {
+  text-shadow: 0px 4px 3px rgba(240, 135, 240, 0.7),
+  0px 8px 13px rgba(240, 135, 240, 0.3),
+  0px 18px 23px rgba(240, 135, 240, 0.3);
 }
 
 .header__btn,
@@ -150,6 +195,7 @@ img {
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
+  cursor: pointer;
 }
 
 .header__btn:after  {
@@ -157,7 +203,7 @@ img {
 }
 
 .min-btn:after {
-  right: -10px;
+  right: 10px;
   border-bottom: 3px solid var(--txt-color);
   border-right: 3px solid var(--txt-color);
 }
@@ -402,6 +448,7 @@ img {
   color: var(--txt-color);
   padding-left: 36px;
   background: no-repeat center left;
+  cursor: pointer;
 }
 
 .section-members__item:first-child {
@@ -414,6 +461,18 @@ img {
 
 .section-members__item:last-child {
   background-image: url('../img/medicine.svg');
+}
+
+.section-members__link:focus {
+  color: var(--main-color);
+}
+
+.section-members__link:hover {
+  color: #9B279B;
+}
+
+.section-members__link:active {
+  text-decoration: underline;
 }
 
 .part-1 {
