--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 @media (max-width: 1024px) {
   body {
     max-width: 1024px;
@@ -307,7 +300,9 @@
   }
 
   .section-work__pic {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
 
   h2.section-work__title-work,
@@ -330,8 +325,13 @@
   }
 
   .section-members__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   li.section-members__item {
