--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
 
 :root {
   --main-color: #5D3EA8;
@@ -122,22 +116,26 @@ img {
 .main-btn:focus,
 .min-btn:focus,
 button.section-work__btn.how-work:focus,
-button.form-section__btn:focus {
+button.form-section__btn:focus,
+.footer-links__social:focus {
   outline: 1px solid #D2C8D2;
   outline-offset: 3px;
   border-radius: 8px;
 }
 
 .main-btn:hover {
-  box-shadow: inset 0 0 7px #EBB0EB;
+  -webkit-box-shadow: inset 0 0 7px #EBB0EB;
+          box-shadow: inset 0 0 7px #EBB0EB;
 }
 
 button.section-work__btn.how-work:hover {
-  box-shadow: inset 0 0 7px #C7BEC7;
+  -webkit-box-shadow: inset 0 0 7px #C7BEC7;
+          box-shadow: inset 0 0 7px #C7BEC7;
 }
 
 button.form-section__btn:hover {
-  box-shadow: inset 0 0 10px #D833D8;
+  -webkit-box-shadow: inset 0 0 10px #D833D8;
+          box-shadow: inset 0 0 10px #D833D8;
   border-radius: 8px;
 }
 
@@ -804,6 +802,20 @@ input[type="email"]:-ms-input-placeholder {
   margin-bottom: 16px;
 }
 
+.footer-links__social:hover {
+  background-color: #D833D8;
+  -webkit-box-shadow: inset 0 0 10px #D833D8;
+          box-shadow: inset 0 0 10px #D833D8;
+  border-radius: 8px;
+}
+
+.footer-links__social:active {
+  background-color: #9B279B;
+  -webkit-box-shadow: inset 0 0 10px #9B279B;
+          box-shadow: inset 0 0 10px #9B279B;
+  border-radius: 8px;
+}
+
 .footer__link {
   position: relative;
 }
@@ -817,35 +829,39 @@ input[type="email"]:-ms-input-placeholder {
   width: 100%;
   background-color: var(--basic-color);
   visibility: hidden;
-  transform: scale(0);
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: ease-in-out .3s;
+  -o-transition: ease-in-out .3s;
   transition: ease-in-out .3s;
 }
 
 .footer__link:focus:after {
   visibility: visible;
   background-color: rgba(255, 266, 255, 0.7);
-  transform: scale(1);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 } 
 
-.footer__title:hover,
-.footer-secure__link:active {
+.footer__title:hover {
   text-shadow: 1px 0 5px rgba(255, 255, 255, 0.7);
 } 
 
 .footer__link:focus:after {
   visibility: visible;
   background-color: rgba(255, 266, 255, 0.7);
-  transform: scale(1);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 } 
 
 .footer__link:hover:after {
   visibility: visible;
-  transform: scale(1);
-}
-
-.footer-secure__link:hover,
-.footer__link:active {
-  color: rgba(255, 255, 255, 0.6);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 
 .footer-secure {
@@ -882,8 +898,20 @@ input[type="email"]:-ms-input-placeholder {
 }
 
 .footer-secure__link:focus {
-  outline: 1px solid var(--basic-color);
-  outline-offset: 3px;
+  outline: 1px solid rgba(255, 255, 255, 0.2);
+  outline-offset: 5px;
+  border-radius: 8px;
+}
+
+.footer-secure__link:hover,
+.footer__link:active {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-secure__link:active {
+  background-color: rgba(216, 51, 216, 0.6);
+  -webkit-box-shadow: inset 0 0 10px rgba(216, 51, 216, 0.6);
+          box-shadow: inset 0 0 10px rgba(216, 51, 216, 0.6);
   border-radius: 8px;
 }
 
